# thinning

./: Cargo.toml  README.md
src/: main.rs  skeleton.rs
