[package]
name = "thinning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = { git = "https://github.com/georust/gdal", features = ["bindgen"] }
gdal-sys = { git = "https://github.com/georust/gdal", features = ["bindgen"] }

[profile.release]
# overflow-checks = true
