[package]
name = "thinning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
gdal = { git = "https://github.com/georust/gdal", features = ["bindgen"] }
gdal-sys = { git = "https://github.com/georust/gdal", features = ["bindgen"] }
indicatif = "0.17.3"
log = "0.4.17"
memmap2 = "0.5.10"

[profile.release]
# overflow-checks = true
